--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2727,6 +2727,7 @@
 			display: inline-block;
 			font-weight: 400;
 			height: inherit;
+			width: 180px;
 			left: 0;
 			line-height: inherit;
 			margin: 0;
@@ -2734,6 +2735,10 @@
 			position: absolute;
 			top: 0;
 			font-size: 1em;
+		}
+
+		.logo img {
+			width: 180px;
 		}
 
 			#header .logo strong {
@@ -2751,7 +2756,14 @@
 			color: inherit;
 			text-decoration: none;
 			font-size: 1em;
+			font-weight: bold;
+			text-transform: uppercase;
+			font-family: 'Josefin Sans', sans-serif;
 		}
+
+			#header a.active {
+				color: #37a5dd;
+			}
 
 			#header a:hover {
 				color: #ffffff;
@@ -2916,7 +2928,7 @@
 /* Banner */
 
 	#banner {
-		padding: 8em 0 9em 0;
+		padding: 6em 0 4em 0;
 		background-image: url(../../images/banner.jpg);
 		background-size: cover;
 		background-position: bottom;
