--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2005,6 +2005,15 @@
 			box-shadow: 0 0 0 1px #4bae77;
 		}
 
+	/*EDit profile*/
+	.form-container {
+	width: 50%;
+		display: block;
+		margin: 100px auto;
+		padding: 50px;
+	}
+
+
 	.select-wrapper {
 		text-decoration: none;
 		display: block;
