--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -771,6 +771,194 @@ textarea.w-select {
 	margin-right: 0
 }
 
+/*Login Page CSS*/
+
+.wrap-login {
+	width: 960px;
+	background: #fff;
+	border-radius: 10px;
+	overflow: hidden;
+  
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 150px;
+	justify-content: space-between;
+	padding: 177px 130px 33px 95px;
+  }
+
+  .login-pic {
+	width: 316px;
+  }
+  
+  .login-pic img {
+	max-width: 100%;
+  }
+
+  .login-form {
+	width: 290px;
+  }
+  
+  .login-form-title {
+	font-family: Poppins-Bold;
+	font-size: 24px;
+	color: #333333;
+	line-height: 1.2;
+	text-align: center;
+  
+	width: 100%;
+	display: block;
+	padding-bottom: 54px;
+  }
+
+  .wrap-input {
+	position: relative;
+	width: 100%;
+	z-index: 1;
+	margin-bottom: 10px;
+  }
+  
+  .input {
+	font-family: Poppins-Medium;
+	font-size: 15px;
+	line-height: 1.5;
+	color: #666666;
+  
+	display: block;
+	width: 100%;
+	background: #e6e6e6;
+	height: 50px;
+	border-radius: 25px;
+	padding: 0 30px 0 68px;
+  }
+
+  /*------------------------------------------------------------------
+[ Focus ]*/
+.focus-input {
+	display: block;
+	position: absolute;
+	border-radius: 25px;
+	bottom: 0;
+	left: 0;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+	box-shadow: 0px 0px 0px 0px;
+	color: rgba(87,184,70, 0.8);
+  }
+  
+  .input:focus + .focus-input {
+	-webkit-animation: anim-shadow 0.5s ease-in-out forwards;
+	animation: anim-shadow 0.5s ease-in-out forwards;
+  }
+  
+  @-webkit-keyframes anim-shadow {
+	to {
+	  box-shadow: 0px 0px 70px 25px;
+	  opacity: 0;
+	}
+  }
+  
+  @keyframes anim-shadow {
+	to {
+	  box-shadow: 0px 0px 70px 25px;
+	  opacity: 0;
+	}
+  }
+  
+  .symbol-input {
+	font-size: 15px;
+  
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	align-items: center;
+	position: absolute;
+	border-radius: 25px;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding-left: 35px;
+	pointer-events: none;
+	color: #666666;
+  
+	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	transition: all 0.4s;
+  }
+  
+  .input:focus + .focus-input + .symbol-input {
+	color: #57b846;
+	padding-left: 28px;
+  }
+
+  /*------------------------------------------------------------------
+[ Button ]*/
+.container-login-form-btn {
+	width: 100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding-top: 20px;
+  }
+  
+  .login-form-btn {
+	font-family: Montserrat-Bold;
+	font-size: 15px;
+	line-height: 1.5;
+	color: #fff;
+	text-transform: uppercase;
+  
+	width: 100%;
+	height: 50px;
+	border-radius: 25px;
+	background: #57b846;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 25px;
+  
+	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	transition: all 0.4s;
+  }
+  
+  .login-form-btn:hover {
+	background: #333333;
+  }
+
+  [ Utility ]*/
+.txt1 {
+  font-family: Poppins-Regular;
+  font-size: 13px;
+  line-height: 1.5;
+  color: #999999;
+}
+
+.txt2 {
+  font-family: Poppins-Regular;
+  font-size: 13px;
+  line-height: 1.5;
+  color: #666666;
+}
+
+
 .w-col {
 	position: relative;
 	float: left;
@@ -888,6 +1076,17 @@ textarea.w-select {
 		left: auto;
 		right: auto
 	}
+	.wrap-login {
+		padding: 177px 90px 33px 85px;
+	  }
+	
+	  .login-pic {
+		width: 35%;
+	  }
+	
+	  .login-form {
+		width: 50%;
+	  }
 }
 
 @media screen and (max-width:767px) {
@@ -946,6 +1145,17 @@ textarea.w-select {
 	.w-col-small-12 {
 		width: 100%
 	}
+	.wrap-login {
+		padding: 100px 80px 33px 80px;
+	  }
+	
+	  .login-pic {
+		display: none;
+	  }
+	
+	  .login-form {
+		width: 100%;
+	  }
 }
 
 @media screen and (max-width:479px) {
@@ -1179,6 +1389,10 @@ textarea.w-select {
 .w-widget-gplus {
 	overflow: hidden
 }
+
+.wrap-login {
+    padding: 100px 15px 33px 15px;
+  }
 
 .w-background-video {
 	position: relative;
@@ -2238,8 +2452,9 @@ p {
 
 .header {
 	padding: 98px 10px;
-	background-image: -webkit-linear-gradient(270deg, rgba(100, 209, 198, .55), rgba(100, 209, 198, .55)), url("http://uploads.webflow.com/5af5e91622d596fd7eb5284c/5af5e91622d596317eb52884_ocean-rocks.jpg");
-	background-image: linear-gradient(180deg, rgba(100, 209, 198, .55), rgba(100, 209, 198, .55)), url("http://uploads.webflow.com/5af5e91622d596fd7eb5284c/5af5e91622d596317eb52884_ocean-rocks.jpg");
+	margin-top: 100px;
+	background-image: -webkit-linear-gradient(270deg, rgba(100, 209, 198, .55), rgba(100, 209, 198, .55)), url('../../images/Header.jpg');
+	background-image: linear-gradient(180deg, rgba(100, 209, 198, .55), rgba(100, 209, 198, .55)), url('../../images/Header.jpg');
 	background-position: 0% 0%, 50% 70%;
 	background-size: auto, cover;
 	color: #fff;
@@ -2257,6 +2472,10 @@ p {
 	padding-top: 18px;
 	padding-bottom: 18px;
 	background-color: #fff;
+	position: fixed;
+	width: 100%;
+	transition: top 0.3s;
+	top: 0;
 }
 
 .nav-link {
@@ -2323,7 +2542,7 @@ p {
 
 .about-section {
 	padding-bottom: 61px;
-	background-color: #fefec9;
+	background-color: #17c0eb;
 	text-align: center;
 }
 
@@ -2351,8 +2570,8 @@ p {
 
 .section.contact {
 	background-color: #7ec4bd;
-	background-image: -webkit-linear-gradient(270deg, rgba(126, 196, 189, .87), #7ec4bd), url("http://uploads.webflow.com/5af5e91622d596fd7eb5284c/5af5e91622d59625b3b5287d_footer-bg.jpg");
-	background-image: linear-gradient(180deg, rgba(126, 196, 189, .87), #7ec4bd), url("http://uploads.webflow.com/5af5e91622d596fd7eb5284c/5af5e91622d59625b3b5287d_footer-bg.jpg");
+	background-image: -webkit-linear-gradient(270deg, rgba(126, 196, 189, .87), #7ec4bd), url("../../images/footer.jpg");
+	background-image: linear-gradient(180deg, rgba(126, 196, 189, .87), #7ec4bd), url("../../images/footer.jpg");
 	background-size: auto, cover;
 	font-family: Vollkorn, serif;
 }
@@ -2715,7 +2934,11 @@ p {
   float: left;
   list-style-type: none;
   max-height: 360px;
-  overflow: auto;
+  overflow: hidden;
+}
+
+.col6:hover {
+	overflow: auto;
 }
 
 /* width */
