--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,8 @@ html {
 }
 
 body {
-	margin: 0
+	margin: 0;
+	background-color: #f5f5f5;
 }
 
 article,
@@ -1603,24 +1604,39 @@ textarea.w-select {
 
 .w-dropdown-list {
 	position: absolute;
-	background: #fff;
+	background-image: url('../../images/Mega-Menu.jpg');
 	display: none;
-  min-width: 90%;
-  width: 80%;
-  max-height: 400px;
-  left: 0px;
-  right: 0px;
-  margin-left: 5%;
-  margin-right: 5%;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.16);
-  border-radius: 5px;
+	min-width: 90%;
+	width: 80%;
+	max-height: 400px;
+	left: 0px;
+	right: 0px;
+	margin-left: 5%;
+	margin-right: 5%;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.16);
+	border-radius: 5px;
+}
+
+.w-dropdown-list-small {
+	position: absolute;
+	display: none;
+	max-height: 400px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.16);
+	border-radius: 5px;
 }
 
 .w-dropdown-list.w--open {
 	display: block
 }
+
+.w-dropdown-list-small.w--open {
+	display: none;
+}
+
 
 .w-dropdown-link {
 	padding: 10px 20px;
@@ -2415,24 +2431,35 @@ p {
 }
 
 .button {
-	display: inline-block;
-	padding: 15px 33px;
-	border-style: solid;
-	border-width: 1px 1px 2px;
-	border-color: #47474f;
-	background-color: transparent;
-	-webkit-transition: background-color 300ms ease;
-	transition: background-color 300ms ease;
-	font-family: Vollkorn, serif;
-	color: #47474f;
-	font-size: 19px;
-	font-style: italic;
-	text-align: center;
-	text-decoration: none;
+	-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		background-color: transparent;
+		box-shadow: inset 0 0 0 3px #6cc091;
+		color: #6cc091 !important;
+		border-radius: 30px;
+		border: 0;
+		cursor: pointer;
+		display: inline-block;
+		font-size: .75em;
+		font-weight: 400;
+		height: 3.75em;
+		line-height: 3.85em;
+		letter-spacing: 2px;
+		padding: 0 4em;
+		text-align: center;
+		text-decoration: none;
+		text-transform: uppercase;
+		white-space: nowrap;
 }
 
 .button:hover {
-	background-color: #fff;
+	background-color: rgba(108, 192, 145, 0.15);
 }
 
 .button.form {
@@ -2475,6 +2502,17 @@ p {
 	width: 100%;
 	transition: top 0.3s;
 	top: 0;
+	-webkit-transform-origin: top;
+	-moz-transform-origin: top;
+	-o-transform-origin: top;
+	-ms-transform-origin: top;
+	transform-origin: top;
+
+	-webkit-animation: balance 1.5s ease-in-out 110ms 1 alternate;
+	-moz-animation: balance 1.5s ease-in-out 110ms 1 alternate;
+	-ms-animation: balance 1.5s ease-in-out 110ms 1 alternate;
+	-o-animation: balance 1.5s ease-in-out 110ms 1 alternate;
+	animation: balance 1.5s ease-in-out 110ms 1 alternate;
 }
 
 .nav-link {
@@ -2514,7 +2552,7 @@ p {
 	font-family: Montserrat, sans-serif;
 	font-size: 44px;
 	line-height: 55px;
-	font-weight: 400;
+	font-weight: bold;
 	text-transform: uppercase;
 }
 
@@ -2541,14 +2579,15 @@ p {
 
 .about-section {
 	padding-bottom: 61px;
-	background-color: #17c0eb;
+	background-color: #ffc038;
 	text-align: center;
 }
 
 .about-text {
 	margin-bottom: 40px;
-	color: #47474f;
+	color: #804646;
 	font-size: 18px;
+	font-family: 'Roboto', Arial, Helvetica, sans-serif;
 	line-height: 25px;
 }
 
@@ -2569,10 +2608,11 @@ p {
 
 .section.contact {
 	background-color: #7ec4bd;
-	background-image: -webkit-linear-gradient(270deg, rgba(126, 196, 189, .87), #7ec4bd), url("../../images/footer.jpg");
-	background-image: linear-gradient(180deg, rgba(126, 196, 189, .87), #7ec4bd), url("../../images/footer.jpg");
-	background-size: auto, cover;
+	background-image: url("../../images/footer.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
 	font-family: Vollkorn, serif;
+	color: #fff;
 }
 
 .section.footer {
@@ -2581,8 +2621,6 @@ p {
 
 .grey-icon-wrapper {
 	margin-bottom: 38px;
-	padding-top: 50px;
-	padding-bottom: 50px;
 	background-color: #f5f5f5;
 }
 
@@ -2817,6 +2855,7 @@ p {
   width: 300px;
   height: 50px;
   float: left;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   font-family: Montserrat, sans-serif;
   padding: 12px 20px;
   border: 1px solid #ccc;
@@ -2917,7 +2956,7 @@ p {
 .nav-sub-list {
   font-family: Montserrat, sans-serif;
   font-weight: normal;
-  color: #666;
+  color: black;
   padding-top: 5px;
   text-transform: uppercase;
 }
@@ -2934,6 +2973,11 @@ p {
   list-style-type: none;
   max-height: 360px;
   overflow: hidden;
+}
+
+.col6 a {
+	text-decoration: none;	
+	color: inherit;
 }
 
 .col6:hover {
