--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -169,8 +169,7 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background-image: linear-gradient(180deg, rgba(255, 228, 38, 0.7), rgba(209, 140, 100, 0.7)), url(../../images/Mega-Menu.jpg);
-  background-size: cover;
+  background: #f5f5f5;
 }
 
 .wrap-login100 {
