--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,8 +25,6 @@
 
 	body {
 		line-height: 1;
-		background-image: linear-gradient(180deg, rgba(255, 228, 38, 0.7), rgba(209, 140, 100, 0.7)), url(../../images/Mega-Menu.jpg);
-    	background-size: cover;
 	}
 
 	ol, ul {
@@ -50,6 +48,8 @@
 	body {
 		-webkit-text-size-adjust: none;
 	}
+
+	
 
 /* Box Model */
 
@@ -1569,6 +1569,9 @@
 
 	}
 
+	body {
+		background: #f5f5f5;
+	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
 			-moz-animation: none !important;
@@ -2018,11 +2021,11 @@
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: #e6e6e6;
+		background: #6cc091;
 		border-radius: 10px;
 		border: none;
-		border: solid 2px #e6e6e6;
-		color: #666666;
+		border: solid 2px #8dcca9;
+		color: #fff;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
@@ -2175,27 +2178,27 @@
 	}
 
 	::-webkit-input-placeholder {
-		color: #666666 !important;
+		color: #c4e5d3 !important;
 		opacity: 1.0;
 	}
 
 	:-moz-placeholder {
-		color: #666666 !important;
+		color: #c4e5d3 !important;
 		opacity: 1.0;
 	}
 
 	::-moz-placeholder {
-		color: #666666 !important;
+		color: #c4e5d3 !important;
 		opacity: 1.0;
 	}
 
 	:-ms-input-placeholder {
-		color: #666666 !important;
+		color: #c4e5d3 !important;
 		opacity: 1.0;
 	}
 
 	.formerize-placeholder {
-		color: #666666 !important;
+		color: #c4e5d3 !important;
 		opacity: 1.0;
 	}
 
